    * New and improved implementation of path-based authorization (r1776832)
  - Minor new features and improvements:
    * svnbench: Show wall-clock time when done (r1703383)
    * svnbench: Show number of bytes transferred across the network (r1710586)
    * svnbench: Actually evaluate the '--with-no-revprops' option (r1709593)
    * New 'svnadmin load-revprops' subcommand (r1694191)
    * New 'svnadmin dump-revprops' subcommand (r1694225)
    * New '--no-flush-to-disk' option for 'svnadmin load' (r1736357, -7357)
    * New '--file' option for several svnadmin subcommands (r1738021)
    * New '--max-request-size' option for svnserve (r1714330)
    * New '--max-response-size' option for svnserve (r1714333)
    * New '-rN' option for 'svnadmin lstxns' (r1703699)
    * New '--search' option for fast 'svn ls' searches (r1767186 et al)
    * Add '--search' option support to 'svnbench null-list' (r1767202)
    * New '-M' option for 'svnlook tree' (r1708222)
    * New '--skip-unchanged' option for 'svnsync copy-revprops' (r1692655)
    * 'svn log --search' is now case-insensitive (r1731300)
    * 'svn log --search' now ignores diacriticals when matching words (r1735614)
    * Improved performance of server-side log processing (r1732768, r1731656)
    * diff3: Reduce processing time and memory usage (r1731659)
    * ra_serf: Adjustments for serf versions with HTTP/2 support (r1716400)
    * ra_serf: Send svndiff1 deltas during commit (r1704317, r1704613, r1791290)
    * 'svn patch': Parse binary diffs in git-style patches (r1703925)
    * 'svnadmin info' now reports latest revision in the repository (r1697953)
    * ra_svn: Various performance-related tweaks (r1694490)
    * Optimize svndiff parser (r1685063)
    * 'svn status' without -v: Stop showing uninteresting deletions (r1664533)
    * Save a few cycles in svn_stringbuf_set() (r1759177)
    * windows: Use the Unicode Windows API (r1756193)